[gd_scene load_steps=4 format=3 uid="uid://x6e0f8cpjob3"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_twkdk"]
[ext_resource type="Texture2D" uid="uid://bbj8evi2o2p7h" path="res://sprites/UI/clock.png" id="2_nlf6r"]
[ext_resource type="Texture2D" uid="uid://qq0ucbsrdobn" path="res://sprites/UI/hand.png" id="3_fdy4e"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_twkdk")

[node name="Clock" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.5
offset_right = 15.5
offset_bottom = 32.0
grow_horizontal = 2
scale = Vector2(8, 8)
pivot_offset = Vector2(16, 10)
size_flags_horizontal = 2
texture = ExtResource("2_nlf6r")

[node name="ClockHand" type="TextureRect" parent="."]
offset_left = 571.0
offset_top = 161.0
offset_right = 574.0
offset_bottom = 174.0
rotation = -1.5708
scale = Vector2(8, 8)
pivot_offset = Vector2(1.5, 12.5)
size_flags_horizontal = 4
texture = ExtResource("3_fdy4e")
expand_mode = 1
stretch_mode = 2

[node name="Tick" type="Label" parent="."]
offset_left = 725.0
offset_top = 56.0
offset_right = 795.0
offset_bottom = 92.0
text = "0"

[node name="TotalTick" type="Label" parent="."]
offset_left = 728.0
offset_top = 106.0
offset_right = 798.0
offset_bottom = 142.0
text = "0"

[node name="DayNight" type="Label" parent="."]
offset_left = 728.0
offset_top = 150.0
offset_right = 798.0
offset_bottom = 186.0
text = "day"
